--- a/project5.html
+++ b/project5.html
@@ -84,7 +84,7 @@
           </div>
           <div class="col-lg-6">
             <img
-              src="C:\Users\PRASHANT PANCHAL\Desktop\my codes\images/iphone6.png"
+              src="iphone6.png"
               class="title-img"
               alt="iphone-mockup"
             />
@@ -133,7 +133,7 @@
             </h2>
             <img
               class="testimonials-img"
-              src="C:\Users\PRASHANT PANCHAL\Desktop\my codes\images/dog-img.jpg"
+              src="dog-img.jpg"
               alt="dog-profile"
             />
             <em>Pebbles, New York</em>
@@ -145,7 +145,7 @@
             </h2>
             <img
               class="testimonials-img"
-              src="C:\Users\PRASHANT PANCHAL\Desktop\my codes\images/lady-img.jpg"
+              src="lady-img.jpg"
               alt="lady-profile"
             />
             <em>Beverly, Illinois</em>
@@ -177,22 +177,22 @@
     <section id="press">
       <img
         class="press-img"
-        src="C:\Users\PRASHANT PANCHAL\Desktop\my codes\images/techcrunch.png"
+        src="techcrunch.png"
         alt="tc-logo"
       />
       <img
         class="press-img"
-        src="C:\Users\PRASHANT PANCHAL\Desktop\my codes\images/tnw.png"
+        src="tnw.png"
         alt="tnw-logo"
       />
       <img
         class="press-img"
-        src="C:\Users\PRASHANT PANCHAL\Desktop\my codes\images/bizinsider.png"
+        src="bizinsider.png"
         alt="biz-insider-logo"
       />
       <img
         class="press-img"
-        src="C:\Users\PRASHANT PANCHAL\Desktop\my codes\images/mashable.png"
+        src="mashable.png"
         alt="mashable-logo"
       />
     </section>
